--- a/app/src/main/res/layout/row_users.xml
+++ b/app/src/main/res/layout/row_users.xml
@@ -28,6 +28,7 @@
             android:layout_centerVertical="true"
             android:layout_marginStart="60dp"
             android:text="@string/beer_name"
+            android:paddingStart="10dp"
             android:textSize="20sp"
             android:textColor="@color/black" />
 
