Splash and Main activity added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#9A9A9A</color>
+    <color name="all_toolbar">#93B2FF</color>
 </resources>
