--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,6 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#9A9A9A</color>
+    <color name="white">#FFFFFF</color>
     <color name="all_toolbar">#93B2FF</color>
 </resources>
